--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ box-shadow: 10px 15px 5px #cbcbcb;
 
 .grid h1 {
 font-family: "sans-serif";
-background-color: Orange;
+background-color: #16f74f;
 font-size: 60px;
 text-align: center;
 color: #ffffff;
@@ -42,7 +42,7 @@ margin-top: 30px;
 }
 
 #bt0, #bt1, #bt2, #bt3 {
-background-color: Green;
+background-color: #96d6a6;
 width: 250px;
 font-size: 20px;
 color: #fff;
@@ -54,7 +54,7 @@ padding: 10px 10px;
 
 #bt0:hover, #bt1:hover, #bt2:hover, #bt3:hover {
 cursor: pointer;
-background-color: #2c0747;
+background-color: #ede13b;
 }
 
 #bt0: focus, #bt1: focus, #bt2: focus, #bt3: focus {
